@@ -1195,7 +1195,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '94';
+$wgStyleVersion = '95';
 
 
 # Server-side caching:
